deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sae-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-force-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sae-api.server.dylanbattig.fr
      secretName: sae-api-tls
  rules:
    - host: sae-api.server.dylanbattig.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sae-api
                port:
                  name: http
